--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Robert-Falconer_2561
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: MacDonald, George
@@ -11,6 +14,8 @@ creator:
 description: '"Largely autobiographical characters portraying MacDonald''s boyhood
   acquaintances in Scotland. As a man, Robert Falconer, aids the poor and destitute
   in London. Written with some Scottish brogue."--Preliminaries.'
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2561#Robert-Falconer
 gutenberg_issued: '2001-03-01'
 gutenberg_type: Text
 identifiers:
